src/objects/LookUpTask__c.object
<CustomObject>
    <description>Created look up of all account,contact and opportunities and their respected text fields and count of their created tasks will be populated on each new</description>
    <fields>
        <fullName>AccountTasksCount__c</fullName>
        <description>AccountTasksCount</description>
        <inlineHelpText>AccountTasksCount</inlineHelpText>
        <label>AccountTasksCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Lookup</description>
        <inlineHelpText>Account Lookup</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LookupTasks</relationshipLabel>
        <relationshipName>LookupTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactTasksCount__c</fullName>
        <description>ContactTasksCount</description>
        <inlineHelpText>ContactTasksCount</inlineHelpText>
        <label>ContactTasksCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact Lookup</description>
        <inlineHelpText>Contact Lookup</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LookupTasks</relationshipLabel>
        <relationshipName>LookupTasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OpportunityTasksCount__c</fullName>
        <description>OpportunityTasksCount</description>
        <inlineHelpText>OpportunityTasksCount</inlineHelpText>
        <label>OpportunityTasksCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity Lookup</description>
        <inlineHelpText>Contact Details</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>LookupTasks</relationshipLabel>
        <relationshipName>LookupTasks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TestObjectApex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make checkbox true on trigger firing</description>
        <inlineHelpText>Make checkbox true on trigger firing</inlineHelpText>
        <label>TestObjectApex</label>
        <type>Checkbox</type>
    </fields>
    <label>LookUpTask</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LookUpTask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LookupTasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>